# laszoo

./: .gitignore  AUDIT_REPORT.md  CLAUDE.md  Cargo.toml  IDEA2.md  INSTRUCTIONS.md  README.md  build-portable.sh  debug_hashmap  debug_hashmap.rs  run_tests.sh
.claude/: settings.local.json
docs/: INSPIRATION.md
src/: error.rs  lib.rs  logging.rs  main.rs  webui_main.rs
src/action/: mod.rs
src/cli/: mod.rs
src/config/: mod.rs
src/enrollment/: mod.rs
src/fs/: mod.rs
src/git/: mod.rs
src/group/: mod.rs
src/monitor/: mod.rs
src/package/: mod.rs
src/service/: mod.rs
src/sync/: mod.rs
src/template/: mod.rs
src/webui/: gamepad.rs  handlers.rs  mod.rs  server.rs  websocket.rs
static/js/: app.js  gamepad.js
templates/: base.html  index.html
tests/: README.md  actions_test.rs  auto_commit_test.rs  diff_test.rs  e2e_tests.rs  enrollment_test.rs  git_test.rs  group_test.rs  integration_test.rs  membership_symlinks_test.rs  package_test.rs  report_test.rs  rollback_test.rs  service_test.rs  sync_test.rs  template_test.rs  unit_tests.rs  watch_test.rs
tests/common/: mod.rs
web/: index.html
