[package]
name = "laszoo"
version = "0.1.0"
edition = "2021"
authors = ["Laszoo Contributors"]
description = "Distributed configuration management with MooseFS"
license = "AGPL-3.0"
repository = "https://github.com/laszoo/laszoo"

[dependencies]
# CLI and configuration
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Logging and errors
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
thiserror = "1.0"
anyhow = "1.0"

# File system operations
notify = "6.1"
walkdir = "2.5"
sha2 = "0.10"

# Template engine
handlebars = "6.0"
regex = "1.10"

# Git integration
git2 = "0.19"

# HTTP client for Ollama
reqwest = { version = "0.12", features = ["json"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
dirs = "5.0"
gethostname = "0.5"
