[package]
name = "laszoo"
version = "0.1.0"
edition = "2021"
authors = ["Laszoo Contributors"]
description = "Distributed configuration management with MooseFS"
license = "AGPL-3.0"
repository = "https://github.com/laszoo/laszoo"

[lib]
name = "laszoo"
path = "src/lib.rs"

[[bin]]
name = "laszoo"
path = "src/main.rs"

[dependencies]
# CLI and configuration
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Async runtime
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"

# Logging and errors
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
thiserror = "1.0"
anyhow = "1.0"

# File system operations
notify = "6.1"
walkdir = "2.5"
sha2 = "0.10"

# Template engine
handlebars = "6.0"
regex = "1.10"

# Git integration
git2 = { version = "0.19", features = ["vendored-openssl"] }

# HTTP client for Ollama
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
dirs = "5.0"
gethostname = "0.5"
libc = "0.2"

# Web UI
axum = { version = "0.7", features = ["ws"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
tokio-tungstenite = "0.21"
serde-wasm-bindgen = "0.6"

# Gamepad support (optional for portable builds)
gilrs = { version = "0.10", optional = true }
lazy_static = "1.4"

# Template engine
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"

# Static file serving
mime_guess = "2.0"

[features]
default = ["gamepad"]
gamepad = ["dep:gilrs"]

[dev-dependencies]
# For testing
tempfile = "3.10"
